Add Resolve endpoint
