# src/cmd/main.go
@@ -61,6 +61,7 @@ func main() {
 	v1.POST("/register", presentation.Register)
 	v1.POST("/login", presentation.Login)
 	v1.POST("/logout", presentation.Logout)
+	v1.POST("/resolve", presentation.ResolveSession)
 
 	if err := router.Run(":" + appConfig.AppPort); err != nil {
 		panic(err)
